step 3. Сайт связан с базой данных, создана доменная модель, настроен EF.

--- a/MyCompany/appsettings.json
+++ b/MyCompany/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "Project": {
+    "ConnectionString": "Data Source=(local); Database=MyCompany; Persist Security Info=false; User ID='sa'; Password='sa'; MultipleActiveResultSets=True; Trusted_Connection=False;",
+    "CompanyName": "Portfolio Site by Oleg Kucherenko",
+    "CompanyPhone": "+7 (951) 664-41-04",
+    "CompanyPhoneShort": "+79516644104",
+    "CompanyEmail": "Ku4eR99@gmail.com"
+  }
 }
