step 4. Создано соглашение авторизации админа, суть: Если для какого-то контроллера есть атребут Area - тогда пользователь использующий контроллер должен быть авторизован через админа. Для этого создан АкаунтКонтроллер и представление Логин-Страницы. В админ панель добавлена возможность редактировать страницы сайта и добавлять/удалять/редактировать услуги (будет использовано в следующих комитах), также добавлена возможность разлогинится.

--- a/MyCompany/MyCompany.csproj
+++ b/MyCompany/MyCompany.csproj
@@ -22,9 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\" />
-    <Folder Include="Areas\Views\" />
     <Folder Include="Models\ViewComponents\" />
+    <Folder Include="Pages\Account\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,7 +44,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
 </Project>
